add user model and message model

--- a/app/views/chatsroom/index.html.erb
+++ b/app/views/chatsroom/index.html.erb
@@ -1,1 +1,53 @@
-<h1>this is chatroom home page</h1>
+<h4 class="ui center aligned medium icon header">
+  <i class="circular coffee icon orange"></i>
+  Say Something
+</h4>
+
+<div class="ui two column grid">
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui feed">
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <em>Christian Rocha</em>: test text
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="extra content">
+        <form class="ui reply form">
+          <div class="field">
+
+          </div>
+          <div class="ui fluid left input icon">
+            <input type="text" placeholder="Search users...">
+            <i class="bordered inverted orange edit icon"></i>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="four wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui inverted vertical menu">
+          <a class="active item">
+            Home
+          </a>
+          <a class="item">
+            Messages
+          </a>
+          <a class="item">
+            Friends
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
