--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,8 @@
 <div class="ui small inverted menu">
       <div class="ui container">
-        <a class="item">
-          Chatroom
-        </a>
-        <a class="item">
-          Messages
-        </a>
+        <%= link_to "Chatroom", login_path, class:"item"%>
+        <%= link_to "Messages", root_path, class:"item"%>
+
         <div class="right menu">
           <div class="ui dropdown item">
             Account <i class="dropdown icon"></i>
