--- a/app/views/chatsroom/index.html.erb
+++ b/app/views/chatsroom/index.html.erb
@@ -8,13 +8,7 @@
     <div class="ui fluid raised card chatbox">
       <div class="content">
         <div class="ui feed">
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Christian Rocha</em>: test text
-              </div>
-            </div>
-          </div>
+          <%= render @messages%>
         </div>
       </div>
       <div class="extra content">
