add ui restrict and route restrict

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,24 @@
 <div class="ui small inverted menu">
       <div class="ui container">
-        <%= link_to "Chatroom", login_path, class:"item"%>
+        <%= link_to "Chatroom", root_path, class:"item"%>
         <%= link_to "Messages", root_path, class:"item"%>
 
         <div class="right menu">
           <div class="ui dropdown item">
             Account <i class="dropdown icon"></i>
             <div class="menu">
-              <a class="item">Login</a>
-              <a class="item">SignUp</a>
-              <a class="item">Logout</a>
+              <% unless logged_in? %>
+                <%= link_to "Login", login_path, class:"item"%>
+              <% else %>
+                <%= link_to "Logout", logout_path, method: :delete, class:"item"%>
+              <% end %>
             </div>
           </div>
-          <div class="item">
-              <div class="ui primary button">Sign Up</div>
-          </div>
+          <% unless logged_in? %>
+            <div class="item">
+                <%= link_to "Login" , login_path, class:"ui primary button"%>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
