--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
     <%= render 'layouts/navigation'%>
     <div class="ui container">
+      <%= render 'layouts/messages'%>
       <%= yield %>
     </div>
   </body>
