create msg from ui

--- a/app/views/chatsroom/index.html.erb
+++ b/app/views/chatsroom/index.html.erb
@@ -12,15 +12,14 @@
         </div>
       </div>
       <div class="extra content">
-        <form class="ui reply form">
+        <%= form_for(@message, html:{ class: "ui reply form"}, url: message_path) do |f| %>
           <div class="field">
-
+            <div class="ui fluid left input icon">
+              <%= f.text_field :body, placeholder:"type something"%>
+              <%= f.button '<i class="bordered inverted orange edit icon"></i>'.html_safe %>
+            </div>
           </div>
-          <div class="ui fluid left input icon">
-            <input type="text" placeholder="Search users...">
-            <i class="bordered inverted orange edit icon"></i>
-          </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
