--- a/app/views/chatsroom/index.html.erb
+++ b/app/views/chatsroom/index.html.erb
@@ -6,13 +6,13 @@
 <div class="ui two column grid">
   <div class="twelve wide column">
     <div class="ui fluid raised card chatbox">
-      <div class="content">
-        <div class="ui feed">
+      <div class="content" id="chat-layout">
+        <div class="ui feed" id="message-container">
           <%= render @messages%>
         </div>
       </div>
       <div class="extra content">
-        <%= form_for(@message, html:{ class: "ui reply form"}, url: message_path) do |f| %>
+        <%= form_for(@message, html:{ class: "ui reply form"}, url: message_path, remote: true ) do |f| %>
           <div class="field">
             <div class="ui fluid left input icon">
               <%= f.text_field :body, placeholder:"type something"%>
